# interview-ai-engineer

./: .gitignore  README.md
fda-regulations/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_pipeline.py  test_pipeline.sh
fda-regulations/data/: analysis.py  ingest.py  schematizer.py  warning_letters_final.jsonl  warning_letters_schematized.jsonl
fda-regulations/data/vector_db/5b660160-fdb0-45a8-905a-e4591ab59013/: index_metadata.pickle
fda-regulations/src/: app.py  models.py
fda-regulations/src/agents/: compliance_agent.py  structuring_agent.py
fda-regulations/src/tools/: rag_tool.py
fda-regulations/tests/: conftest.py  run_pipeline.py  test_models.py  test_tools.py
