[project]
name = "fda-regulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "fastembed>=0.5.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "selectolax>=0.4.7",
    "tqdm>=4.67.3",
    "uvicorn>=0.43.0",
]


[tool.uv]
# This prevents uv from trying to find a project named 'fda-regulations'
# inside the folder, keeping the build simple.
managed = true
